# Trabalho-pratico-grafos

./: .env.example  .gitattributes  .gitignore  README.md  abstract_graph.py  closed_issues.csv  config.py  graph_impl.py  issues.csv  issues_authors.csv  main.py  pullRequests.csv  pyproject.toml  utils.py  vertex.py
data/: closed_issues.csv  issues.csv  issues_authors.csv  node.json  pullRequests.csv  starship.json
docs/LaTeX/: main.tex  sbc-template.bib
docs/class/: base.puml  extractor.puml  lib.puml  overview.puml  vertex.puml
extractor/: config.py  graph_ql.py  requests.py  service.py
extractor/queries/: issue_comments.graphql  issue_timeline_items.graphql  issues.graphql  pull_request_comments.graphql  pull_request_reviews.graphql  pull_requests.graphql  rate_limit.graphql
lib/: abstract_graph.py  abstract_statistics.py  adjacency_list_graph.py  adjacency_matrix_graph.py  common.py  graph_build.py  graph_factory.py  graph_impl.py  implementations.py  networkx_statistics.py  parser.py  statistics.py
src/: abstract_graph.py  adjacency_list_graph.py  adjacency_matrix_graph.py  edge.py  graph_build.py  graph_impl.py  main.py  vertex.py
statistics/: graph_metrics.csv
statistics/manual/: graph_metrics.csv
tables/: _edges.csv  _nodes.csv  node_edges.csv  node_vertexes.csv
tables/node/: graph_edges.csv  graph_vertexes.csv
tables/node/closed/: graph_edges.csv  graph_vertexes.csv
tables/node/comments/: graph_edges.csv  graph_vertexes.csv
tables/node/integrated/: graph_edges.csv  (+1 more)
tables/starship/: graph_edges.csv  graph_vertexes.csv
(+26 files in other folders)
