[project]
name = "trabalho-pratico-grafos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "edge>=0.4.0",
    "dotenv>=0.9.9",
    "gql[requests]>=4.0.0",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
    "ruff>=0.14.4",
]
